# midi-daw

./: .gitignore  Cargo.toml  README.md  justfile
frontends/midi-daw.android/: Cargo.toml  Dioxus.toml  justfile
frontends/midi-daw.android/assets/: loading-dots.css  main.css
frontends/midi-daw.android/src/: main.rs  playback.rs  tracks.rs
frontends/midi-daw.gpd-4/: Cargo.toml  README.md
frontends/midi-daw.gpd-4/src/: button_tracker.rs  lib.rs  sphere.rs
frontends/midi-daw.gpd-4/src/display/: mod.rs
frontends/midi-daw.gpd-4/src/helpers/: less_then.rs  mod.rs
frontends/midi-daw.gpd-4/src/midi_plugin/: mod.rs
frontends/midi-daw.knulli/: justfile  midi-daw.pygame  midi-daw.sh  pyproject.toml  requirements.txt
frontends/midi-daw.knulli/midi-daw-front/: front-end.py
frontends/midi-daw.knulli/midi_daw_back/: Cargo.toml  pyproject.toml
frontends/midi-daw.knulli/midi_daw_back/src/: lib.rs
frontends/midi-daw.knulli/midi_daw_front/: front_end.py
midi-daw/: Cargo.toml  README.md
midi-daw-server/: Cargo.toml  empty-line.py  justfile
midi-daw-server/src/: lib.rs  main.rs
midi-daw-server/src/midi/: automation.rs  dev.rs  mod.rs  out.rs
midi-daw-server/src/sequencer/: mod.rs
midi-daw-server/src/server/: mod.rs  note.rs
midi-daw-server/src/server/message_bus/: mod.rs
midi-daw-server/test-json/: add-note.json  set-dev.json
midi-daw-types/: Cargo.toml  pyproject.toml
midi-daw-types/src/: lib.rs
midi-daw-types/src/automation/: envelopes.rs  mod.rs
midi-daw-types/src/automation/envelope/: mod.rs
midi-daw-types/src/automation/lfo/: mod.rs  wavetable.rs
midi-daw/.cargo/: config.toml
midi-daw/src/: lib.rs  sphere.rs
midi-daw/src/display/: midi_assign.rs  mod.rs
midi-daw/src/display/shared/: mod.rs
midi-daw/src/helpers/: button_ext.rs  mod.rs
midi-daw/src/midi_plugin/: mod.rs
prototype-files/: example.mdaw  example.py
python-lib/: pyproject.toml  requirements.txt  test-1.py  test-2.py
python-lib/midi_daw/: __init__.py  main.py
python-lib/src/: main.py
src/: main.rs
src/midi/: mod.rs
test-files/: .gitignore  jupyter-test.ipynb  test-1.py  test-2.py  test-3.py
