[package]
name = "midi-daw"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.4"
actix-web = "4.11.0"
async-std = "1.13.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
fx-hash = { version = "0.1.0", features = ["nightly"] }
log = "0.4.27"
midi-daw-types = { version = "0.1.0", path = "../midi-daw-types" }
midi-msg = "0.8.0"
midir = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
