[package]
name = "midi-daw"
version = "0.1.0"
edition = "2024"

[features]
default = ["pyo3"]
pyo3 = ["midi-daw-types/pyo3"]

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.4"
actix-web = "4.11.0"
actix-ws = "0.3.0"
async-std = { version = "1.13.1", features = ["async-attributes", "async-process", "futures-core"] }
bincode = "2.0.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = "0.3.31"
futures-lite = "2.6.1"
fx-hash = { version = "0.1.0", features = ["nightly"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.19", features = ["client", "http1", "tokio"] }
hyperlocal = { version = "0.9.1", features = ["hyper-util"] }
midi-daw-types = { version = "0.1.0", path = "../midi-daw-types", default-features = false }
midi-msg = "0.8.0"
midir = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing"] }
uuid = { version = "1.17.0", features = ["v4"] }
xdg = { version = "3.0.0", features = ["serde"] }
