[package]
name = "midi-daw-types"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "midi_daw_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
midi-msg = "0.8.0"
pyo3 = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
