[package]
name = "midi-daw-types"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "midi_daw_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
enum_dispatch = "0.3.13"
hound = "3.5.1"
midi-msg = "0.8.0"
pyo3 = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
