[package]
name = "midi-daw-types"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "midi_daw_types"
crate-type = ["cdylib", "rlib"]

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[dependencies]
bincode = "2.0.1"
enum_dispatch = "0.3.13"
hound = "3.5.1"
midi-msg = "0.8.0"
pyo3 = { version = "0.27", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.44"
