[package]
name = "midi-daw-lib"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
vst = "0.4.0"
midi-daw-types = { version = "0.1.0", path = "../midi-daw-types" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
fx-hash = { version = "0.1.0", features = ["nightly"] }
midi-msg = "0.8.0"
midir = "0.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bevy = { version = "0.16.1", features = ["wayland"] }
midi-daw = { version = "0.1.0", path = "../midi-daw-server" }
