[package]
name = "midi_daw_back"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "midi_daw_back"
crate-type = ["cdylib"]

[dependencies]
midi-daw = { version = "0.1.0", path = "../../../midi-daw-server" }
midi-daw-types = { version = "0.1.0", path = "../../../midi-daw-types" }
pyo3 = "0.26"
rustc-hash = { version = "2.1.1", features = ["nightly"] }
